--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,32 @@
+:root {
+  --azul: #014561;
+  --azul2: #1C86A4;
+  --dourado: #BE9667;
+  --cinza: #949494;
+}  
+
 html,
 body {
+  position: static;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Lato';
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 27px;
+  letter-spacing: 0em;
+  text-align: left;
+
+  background: #E5E5E5
+}
+header{
+  background-color: #0A0A0A;
+  width: 100vw;
+}
+
+h1,h2,p,br,span {
+  margin: 0;
 }
 
 a {
@@ -11,6 +34,22 @@ a {
   text-decoration: none;
 }
 
+button {
+	font-family: inherit;
+	font-size: inherit;
+	color: inherit;
+	font-weight: inherit;
+	padding: 0;
+	border: none;
+	background-color: unset;
+}
+
+address{
+  font-style: normal;
+
+}
+
 * {
   box-sizing: border-box;
 }
+
