--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,11 @@ body {
 
   background: #E5E5E5
 }
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 header{
   background-color: #0A0A0A;
   width: 100vw;
